# lanc-compiler

./: CMakeLists.txt
examples/: test_variable.lanc
includes/: lanc_lexer.h  lanc_parser.h
src/: lanc_lexer.c  lanc_parser.c  main.c
